# ditnd-unification-site

./: .env.example  .gitignore  README.md  biome.jsonc  cypress.config.ts  docker-compose.yml  next.config.js  package-lock.json  package.json  skills-lock.json  tsconfig.json
.github/workflows/: accessibility-review.yml  ci.yml
cypress/: tsconfig.json
cypress/e2e/: chatbot-llm.cy.ts  chatbot.cy.ts  contact-particuliers.cy.ts  contact-pros-cra.cy.ts  page-loads.cy.ts
docs/: plan-redirections-seo.md
scripts/: .env.example  pyproject.toml  rag-practical-guides.py  requirements.txt
scripts/testing/: test_basic.py
src/: env.js  env.ts  middleware.ts  proxy.ts
src/migrations/: 20251210_095603.json  20251210_095603.ts  20251211_132140.json  20251211_132140.ts  20251212_092451.json  20251212_092451.ts  20251212_140951.json  20251212_140951.ts  20260128_083247_init.json  20260128_083247_init.ts  20260204_093447.json  20260204_093447.ts  20260204_095236.json  20260204_095236.ts  20260204_101206.json  20260204_101206.ts  20260204_152940.json  20260204_152940.ts  20260206_105518.json  20260206_105518.ts  20260213_093527.json  20260213_093527.ts  20260220_160018.json  20260220_160018.ts  20260303_135634.json  20260303_135634.ts  20260309_140436.json  20260309_140436.ts  20260310_111338.json  20260310_111338.ts  20260316_104938.json  20260316_104938.ts  20260320_171927.json  20260320_171927.ts  20260323_120000_migrate_callout_highlight_to_richtext.ts  20260323_163106.json  20260323_163106.ts  20260323_164005.json  20260323_164005.ts  20260416_100000.ts  (+36 more)
src/utils/: api.ts  (+14 more)
(+235 files in other folders)
