[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.71.0",
    "python-dotenv>=1.0.0",
    "psycopg2>=2.9.11",
    "torch>=2.10.0",
    "pgvector>=0.4.2",
    "sentence-transformers>=5.2.3",
]
